improved the ecommerce web app still goi g strong

--- a/index.html
+++ b/index.html
@@ -419,16 +419,103 @@
               <h4>Crazy Deals</h4>
               <h2>Buy 1 get one free</h2>
               <span>The best vape pens in Kanairo</span>
-              <button>Learn More</button>
+              <button class="white">Learn More</button>
             </div>
-             <div class="banner-box">
-              <h4>Crazy Deals</h4>
-              <h2>Buy 1 get one free</h2>
-              <span>The best vape pens in Kanairo</span>
-              <button>Learn More</button>
+             <div class="banner-box banner-box2">
+              <h4>New Pens</h4>
+              <h2>Upcoming Deals</h2>
+              <span>New Arrivals for You</span>
+              <button class="white">Collection</button>
             </div>
           </section>
           <!-- other banner  section ends here -->
+          <!-- text banner3 section starts here -->
+          <section id='banner3'>
+            <div class="banner-box">
+              <h2>Seasonal Sales</h2>
+              <h3>Shash Flavored -50% OFF</h3>
+            </div>
+             <div class="banner-box banner-box2">
+              <h2>New VapePens Available</h2>
+              <h3>New flavours Available</h3>
+            </div>
+             <div class="banner-box banner-box3">
+              <h2>Great New Designs</h2>
+              <h3>Jamaican flavours</h3>
+            </div>
+          </section>
+          <!-- text banner3 section ends here -->
+          <!-- newsletter section starts here -->
+          <section id='newsletter' class="section-p1 section-m1">
+            <div class="newstext">
+              <h4>Sign Up For Our Newsletter</h4>
+              <p>Get Email updates about our latest shop and <span>special offers</span></p>
+            </div>
+            <div class="form">
+              <input type="text" placeholder="Your email address">
+              <button class="normal">Sign Up</button>
+            </div>
+          </section>
+          <!-- newsletter section ends here -->
+          <!-- footer section starts here -->
+          <footer class="section-p1">
+            <!-- first footer column starts here -->
+            <div class="col">
+              <img class="logo" src="./img/logo.png" alt="logo">
+              <h4>Contact</h4>
+              <p><strong>Address</strong>: 312 Nairobi Road, Street 32, Kanairo</p>
+              <p><strong>Phone</strong>: 0704596380</p>
+              <p><strong>Hours</strong>: 10:00 - 18:00. Mon - Sat</p>
+              <div class="follow">
+                <h4>Follow Us</h4>
+                <div class="icon">
+                  <i class="fab fa-facebook-f"></i>
+                  <i class="fab fa-twitter"></i>
+                  <i class="fab fa-instagram"></i>
+                  <i class="fab fa-pinterest-p"></i>
+                  <i class="fab fa-youtube"></i>
+                </div>
+              </div>
+            </div>
+            <!-- first footer column ends here -->
+            <!-- second footer column starts here -->
+            <div class="col">
+              <h4>About</h4>
+              <a href="#">About Us</a>
+              <a href="#">  Delivery Information</a>
+              <a href="#">Privacy Poilicy</a>
+              <a href="#">Terms & Conditions</a>
+              <a href="#">Contact Us</a>
+            </div>
+            <!-- second footer column ends here -->
+            <!-- third footer column starts here -->
+              <div class="col">
+              <h4>My Account</h4>
+              <a href="#">Sign In</a>
+              <a href="#">View Cart</a>
+              <a href="#">My Wishlist</a>
+              <a href="#">Track My Orders</a>
+              <a href="#">Help</a>
+            </div>
+            <!-- third footer column ends here -->
+            <!-- fourth footer column starts here -->
+            <div class="col install">
+              <h4>Install App</h4>
+              <p>From App Store or Google Play</p>
+              <div class="row">
+                <img src="./img/pay/app.jpg" alt="">
+                <img src="./img/pay/play.jpg" alt="">
+                <p>Secured Payment Gateways</p>
+                <img src="./img/pay/pay.png" alt="">
+              </div>
+
+            </div>
+            <!-- fourth footer column ends here -->
+            <!-- last footer part starts here -->
+            <div class="copyright">
+              <p>Copyright &copy; 2022 VapePens. All Rights Reserved</p>
+            </div>
+          </footer>
     <script src="index.js"></script>
   </body>
 </html>
