--- a/shop.html
+++ b/shop.html
@@ -57,7 +57,7 @@
       <h2>Featured Products</h2>
       <p>Latest Vape Pens in Kenya</p>
       <div class="pro-container">
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html';">
           <img src="./img/products/f1.jpg" alt="" />
           <div class="des">
             <span>electo</span>
