--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <p>Latest Vape Pens in Kenya</p>
       <div class="pro-container">
         <div class="pro">
-          <img src="./img/products/f1.jpg" alt="" />
+          <img src="./img/products/f6.jpg" alt="" />
           <div class="des">
             <span>electo</span>
             <h5>Electric vape pens</h5>
@@ -107,7 +107,7 @@
         </div>
 
         <div class="pro">
-          <img src="./img/products/f2.jpg" alt="" />
+          <img src="./img/products/n1.jpg" alt="" />
           <div class="des">
             <span>shash</span>
             <h5>Dope Vape Pens</h5>
@@ -167,9 +167,9 @@
         </div>
 
         <div class="pro">
-          <img src="./img/products/f1.jpg" alt="" />
+          <img src="./img/products/f2.jpg" alt="" />
           <div class="des">
-            <span>electo</span>
+            <span>electop</span>
             <h5>Electric vape pens</h5>
                 <div class="star">
             <i class="fas fa-star"></i>
@@ -187,9 +187,9 @@
         </div>
 
         <div class="pro">
-          <img src="./img/products/f1.jpg" alt="" />
+          <img src="./img/products/b2.jpg" alt="" />
           <div class="des">
-            <span>electo</span>
+            <span>electopizo</span>
             <h5>Electric vape pens</h5>
                 <div class="star">
             <i class="fas fa-star"></i>
@@ -206,9 +206,9 @@
             </a>
         </div>
         <div class="pro">
-          <img src="./img/products/f1.jpg" alt="" />
+          <img src="./img/products/f12.jpg" alt="" />
           <div class="des">
-            <span>electo</span>
+            <span>electozip</span>
             <h5>Electric vape pens</h5>
                 <div class="star">
             <i class="fas fa-star"></i>
@@ -226,7 +226,7 @@
         </div>
 
         <div class="pro">
-          <img src="./img/products/f1.jpg" alt="" />
+          <img src="./img/products/f5.jpg" alt="" />
           <div class="des">
             <span>electo</span>
             <h5>Electric vape pens</h5>
@@ -260,7 +260,7 @@
       <p>Latest Vape Pens in Kenya</p>
       <div class="pro-container">
         <div class="pro">
-          <img src="./img/products/f1.jpg" alt="" />
+          <img src="./img/products/n5.jpg" alt="" />
           <div class="des">
             <span>electo</span>
             <h5>Electric vape pens</h5>
@@ -280,7 +280,7 @@
         </div>
 
         <div class="pro">
-          <img src="./img/products/f2.jpg" alt="" />
+          <img src="./img/products/n6.jpg" alt="" />
           <div class="des">
             <span>shash</span>
             <h5>Dope Vape Pens</h5>
@@ -300,7 +300,7 @@
         </div>
         
         <div class="pro">
-          <img src="./img/products/f3.jpg" alt="" />
+          <img src="./img/products/n7.jpg" alt="" />
           <div class="des">
             <span>electo</span>
             <h5>Electric vape pens</h5>
@@ -320,7 +320,7 @@
         </div>
 
         <div class="pro">
-          <img src="./img/products/f4.jpg" alt="" />
+          <img src="./img/products/n3.jpg" alt="" />
           <div class="des">
             <span>shabz</span>
             <h5>Electric vape pencils</h5>
@@ -340,7 +340,7 @@
         </div>
 
         <div class="pro">
-          <img src="./img/products/f1.jpg" alt="" />
+          <img src="./img/products/f11.jpg" alt="" />
           <div class="des">
             <span>electo</span>
             <h5>Electric vape pens</h5>
@@ -360,7 +360,7 @@
         </div>
 
         <div class="pro">
-          <img src="./img/products/f1.jpg" alt="" />
+          <img src="./img/products/f13.jpg" alt="" />
           <div class="des">
             <span>electo</span>
             <h5>Electric vape pens</h5>
@@ -379,7 +379,7 @@
             </a>
         </div>
         <div class="pro">
-          <img src="./img/products/f1.jpg" alt="" />
+          <img src="./img/products/f9.jpg" alt="" />
           <div class="des">
             <span>electo</span>
             <h5>Electric vape pens</h5>
