--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="mwili">
     <!-- the navbar starts here -->
     <section id="header">
       <!-- logo -->
       <a href="#">
-        <img src="./img/logo.png" alt="" class="logo" />
+        <h1>NA<span>TE</span>🔌</h1>
+        <!-- <img src="./img/logo.png" alt="" class="logo" /> -->
       </a>
       <!-- navbar items -->
       <div>
@@ -92,12 +94,12 @@
             <span>electo</span>
             <h5>Electric vape pens</h5>
                 <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
+             <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
           </div>
           <h4>Kshs. 500</h4>
           </div>
@@ -112,12 +114,12 @@
             <span>shash</span>
             <h5>Dope Vape Pens</h5>
                 <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
+             <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
           </div>
           <h4>Kshs. 500</h4>
           </div>
@@ -132,12 +134,12 @@
             <span>electo</span>
             <h5>Electric vape pens</h5>
                 <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
+             <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
           </div>
           <h4>Kshs. 500</h4>
           </div>
@@ -152,12 +154,12 @@
             <span>shabz</span>
             <h5>Electric vape pencils</h5>
                 <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
+             <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
           </div>
           <h4>Kshs. 500</h4>
           </div>
@@ -172,12 +174,12 @@
             <span>electop</span>
             <h5>Electric vape pens</h5>
                 <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
+             <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
           </div>
           <h4>Kshs. 500</h4>
           </div>
@@ -192,12 +194,12 @@
             <span>electopizo</span>
             <h5>Electric vape pens</h5>
                 <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
+             <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
           </div>
           <h4>Kshs. 500</h4>
           </div>
@@ -211,12 +213,12 @@
             <span>electozip</span>
             <h5>Electric vape pens</h5>
                 <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
+             <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
           </div>
           <h4>Kshs. 500</h4>
           </div>
@@ -231,12 +233,12 @@
             <span>electo</span>
             <h5>Electric vape pens</h5>
                 <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
+             <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
           </div>
           <h4>Kshs. 500</h4>
           </div>
@@ -265,12 +267,12 @@
             <span>electo</span>
             <h5>Electric vape pens</h5>
                 <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
+             <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
           </div>
           <h4>Kshs. 500</h4>
           </div>
@@ -285,12 +287,12 @@
             <span>shash</span>
             <h5>Dope Vape Pens</h5>
                 <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
+             <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
           </div>
           <h4>Kshs. 500</h4>
           </div>
@@ -305,12 +307,12 @@
             <span>electo</span>
             <h5>Electric vape pens</h5>
                 <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
+             <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
           </div>
           <h4>Kshs. 500</h4>
           </div>
@@ -325,12 +327,12 @@
             <span>shabz</span>
             <h5>Electric vape pencils</h5>
                 <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
+             <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
           </div>
           <h4>Kshs. 500</h4>
           </div>
@@ -345,12 +347,12 @@
             <span>electo</span>
             <h5>Electric vape pens</h5>
                 <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
+             <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
           </div>
           <h4>Kshs. 500</h4>
           </div>
@@ -365,12 +367,12 @@
             <span>electo</span>
             <h5>Electric vape pens</h5>
                 <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
+             <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
           </div>
           <h4>Kshs. 500</h4>
           </div>
@@ -384,12 +386,12 @@
             <span>electo</span>
             <h5>Electric vape pens</h5>
                 <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
+             <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
           </div>
           <h4>Kshs. 500</h4>
           </div>
@@ -404,12 +406,12 @@
             <span>electo</span>
             <h5>Electric vape pens</h5>
                 <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
+             <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
           </div>
           <h4>Kshs. 500</h4>
           </div>
@@ -468,7 +470,8 @@
           <footer class="section-p1">
             <!-- first footer column starts here -->
             <div class="col">
-              <img class="logo" src="./img/logo.png" alt="logo">
+              <h1>NA<span>TE</span>🔌</h1>
+              <!-- <img class="logo" src="./img/logo.png" alt="logo"> -->
               <h4>Contact</h4>
               <p><strong>Address</strong>: 312 Nairobi Road, Street 32, Kanairo</p>
               <p><strong>Phone</strong>: 0704596380</p>
@@ -523,6 +526,8 @@
               <p>Copyright &copy; 2022 VapePens. All Rights Reserved</p>
             </div>
           </footer>
+
     <script src="index.js"></script>
+    </div>
   </body>
 </html>
