--- a/shop.html
+++ b/shop.html
@@ -16,7 +16,8 @@
     <section id="header">
       <!-- logo -->
       <a href="#">
-        <img src="./img/logo.png" alt="" class="logo" />
+        <h1>NA<span>TE</span>🔌</h1>
+        <!-- <img src="./img/logo.png" alt="" class="logo" /> -->
       </a>
       <!-- navbar items -->
       <div>
@@ -27,7 +28,8 @@
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact Us</a></li>
           <li id="lg-bag">
-            <a href="cart.html"><i class="fas fa-shopping-bag"></i></a>
+            <!-- <a href="cart.html"><i class="fas fa-shopping-bag"></i></a> -->
+            <a href="cart.html"><i>🛒</i></a>
           </li>
           <a href="#" id="close">
             <i class="fas fa-times"></i>
@@ -35,7 +37,8 @@
         </ul>
       </div>
       <div id="mobile">
-        <a href="cart.html"><i class="fas fa-shopping-bag"></i></a>
+        <!-- <a href="cart.html"><i class="fas fa-shopping-bag"></i></a> -->
+        <a href="cart.html"><i>🛒</i></a>
         <i id="bar" class="fas fa-outdent"></i>
       </div>
     </section>
@@ -53,7 +56,337 @@
     </section>
     <!-- hero section ends here -->
     <!-- products section starts here-->
-    <section id="product1" class="section-p1">
+    <!-- p1 -->
+            <section id="product1" class="section-p1">
+      <h2>Featured Products🛒</h2>
+      <p>Latest Vape Pens in Kenya</p>
+      <div class="pro-container">
+        <div class="pro" onclick="window.location.href='sproduct.html' ">
+          <img src="./img/products/n5.jpg" alt="" />
+          <div class="des">
+            <span>electo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart"></i>
+          </a>
+        </div>
+
+        <div class="pro">
+          <img src="./img/products/n6.jpg" alt="" />
+          <div class="des">
+            <span>shash</span>
+            <h5>Dope Vape Pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart"></i>
+          </a></a>
+        </div>
+        
+        <div class="pro">
+          <img src="./img/products/n7.jpg" alt="" />
+          <div class="des">
+            <span>electo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart"></i>
+            </a>
+        </div>
+
+        <div class="pro">
+          <img src="./img/products/n3.jpg" alt="" />
+          <div class="des">
+            <span>shabz</span>
+            <h5>Electric vape pencils</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart"></i>
+            </a>
+        </div>
+
+        <div class="pro">
+          <img src="./img/products/f11.jpg" alt="" />
+          <div class="des">
+            <span>electo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart"></i>
+            </a>
+        </div>
+
+        <div class="pro">
+          <img src="./img/products/f13.jpg" alt="" />
+          <div class="des">
+            <span>electo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart"></i>
+            </a>
+        </div>
+        <div class="pro">
+          <img src="./img/products/f9.jpg" alt="" />
+          <div class="des">
+            <span>electo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart"></i>
+            </a>
+        </div>
+
+        <div class="pro">
+          <img src="./img/products/f1.jpg" alt="" />
+          <div class="des">
+            <span>electo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 3500</h4>
+          </div>
+          <a href="product.html">
+            <i  class="fas fa-shopping-cart cart">🛒</i>
+            </a>
+        </div>
+      </div>
+    </section>
+    <!-- p2 -->
+        <section id="product1" class="section-p1">
+   
+      <div class="pro-container">
+        <div class="pro">
+          <img src="./img/products/f6.jpg" alt="" />
+          <div class="des">
+            <span>electo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart"></i>
+          </a>
+        </div>
+
+        <div class="pro">
+          <img src="./img/products/n1.jpg" alt="" />
+          <div class="des">
+            <span>shash</span>
+            <h5>Dope Vape Pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart"></i>
+          </a></a>
+        </div>
+        
+        <div class="pro">
+          <img src="./img/products/f3.jpg" alt="" />
+          <div class="des">
+            <span>electo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart"></i>
+            </a>
+        </div>
+
+        <div class="pro">
+          <img src="./img/products/f4.jpg" alt="" />
+          <div class="des">
+            <span>shabz</span>
+            <h5>Electric vape pencils</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart"></i>
+            </a>
+        </div>
+
+        <div class="pro">
+          <img src="./img/products/f2.jpg" alt="" />
+          <div class="des">
+            <span>electop</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart"></i>
+            </a>
+        </div>
+
+        <div class="pro">
+          <img src="./img/products/b2.jpg" alt="" />
+          <div class="des">
+            <span>electopizo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart"></i>
+            </a>
+        </div>
+        <div class="pro">
+          <img src="./img/products/f12.jpg" alt="" />
+          <div class="des">
+            <span>electozip</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart"></i>
+            </a>
+        </div>
+
+        <div class="pro">
+          <img src="./img/products/f5.jpg" alt="" />
+          <div class="des">
+            <span>electo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart"></i>
+            </a>
+        </div>
+      </div>
+    </section>
+
+    <!-- <section id="product1" class="section-p1">
       <h2>Featured Products</h2>
       <p>Latest Vape Pens in Kenya</p>
       <div class="pro-container">
@@ -376,7 +709,7 @@
             </a>
         </div>
       </div>
-    </section>
+    </section> -->
          <!-- products section ends here -->
          <!-- pagination section starts here -->
          <section id="pagination" class="section-p1">
