--- a/sproduct.html
+++ b/sproduct.html
@@ -16,7 +16,8 @@
     <section id="header">
       <!-- logo -->
       <a href="#">
-        <img src="./img/logo.png" alt="" class="logo" />
+        <h1>NA<span>TE</span>🔌</h1>
+        <!-- <img src="./img/logo.png" alt="" class="logo" /> -->
       </a>
       <!-- navbar items -->
       <div>
@@ -297,7 +298,8 @@
     <footer class="section-p1">
       <!-- first footer column starts here -->
       <div class="col">
-        <img class="logo" src="./img/logo.png" alt="logo" />
+        <h1>NA<span>TE</span>🔌</h1>
+        <!-- <img class="logo" src="./img/logo.png" alt="logo" /> -->
         <h4>Contact</h4>
         <p><strong>Address</strong>: 312 Nairobi Road, Street 32, Kanairo</p>
         <p><strong>Phone</strong>: 0704596380</p>
