--- a/sproduct.html
+++ b/sproduct.html
@@ -28,16 +28,16 @@
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact Us</a></li>
           <li id="lg-bag">
-            <a href="cart.html"><i class="fas fa-shopping-bag"></i></a>
+            <a href="cart.html"><i class="fas fa-shopping-bag"></i>🛒</a>
           </li>
           <a href="#" id="close">
-            <i class="fas fa-times"></i>
+            <i class="fas fa-times">✖</i>
           </a>
         </ul>
       </div>
       <div id="mobile">
-        <a href="cart.html"><i class="fas fa-shopping-bag"></i></a>
-        <i id="bar" class="fas fa-outdent"></i>
+        <a href="cart.html"><i class="fas fa-shopping-bag">🛒</i></a>
+        <i id="bar" class="fas fa-outdent">Ⓜ</i>
       </div>
     </section>
     <!-- the navbar ends here -->
@@ -45,7 +45,7 @@
     <section id="proDetails" class="section-p1">
       <div class="single-pro-image" id="picha">
         <img
-          src="./img/products/f1.jpg"
+          src="./img/products/n5.jpg"
           width="100%"
           id="MainImg"
           alt="product 1"
@@ -53,7 +53,7 @@
         <div class="small-img-group">
           <div class="small-img-col">
             <img
-              src="./img/products/f1.jpg"
+              src="./img/products/n5.jpg"
               width="100%"
               class="small-img"
               alt="product 1"
@@ -61,7 +61,7 @@
           </div>
           <div class="small-img-col">
             <img
-              src="./img/products/f2.jpg"
+              src="./img/products/n5.jpg"
               width="100%"
               class="small-img"
               alt="product 1"
@@ -69,7 +69,7 @@
           </div>
           <div class="small-img-col">
             <img
-              src="./img/products/f3.jpg"
+              src="./img/products/n5.jpg"
               width="100%"
               class="small-img"
               alt="product 1"
@@ -77,7 +77,7 @@
           </div>
           <div class="small-img-col">
             <img
-              src="./img/products/f4.jpg"
+              src="./img/products/n5.jpg"
               width="100%"
               class="small-img"
               alt="product 1"
@@ -96,8 +96,12 @@
           <option>Small</option>
           <option>Large</option>
         </select>
-        <input type="number" value="1" />
+        <div class="number">
+           <input type="number" value="1" />
         <button class="normal">Add to cart</button>
+        </div>
+        <!-- <input type="number" value="1" />
+        <button class="normal">Add to cart</button> -->
         <h4>Description</h4>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
@@ -113,11 +117,342 @@
     </section>
     <!-- single product details section ends  here -->
     <!-- featured product details starts here -->
+    <!-- p1 -->
             <section id="product1" class="section-p1">
+      <h2>Related Products😉</h2>
+      <p>Latest Vape Pens in Kenya</p>
+      <div class="pro-container">
+        <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+          <img src="./img/products/n5.jpg" alt="" />
+          <div class="des">
+            <span>electo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart">🛒</i>
+          </a>
+        </div>
+
+        <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+          <img src="./img/products/n6.jpg" alt="" />
+          <div class="des">
+            <span>shash</span>
+            <h5>Dope Vape Pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart">🛒</i>
+          </a></a>
+        </div>
+        
+        <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+          <img src="./img/products/n7.jpg" alt="" />
+          <div class="des">
+            <span>electo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart">🛒</i>
+            </a>
+        </div>
+
+        <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+          <img src="./img/products/n3.jpg" alt="" />
+          <div class="des">
+            <span>shabz</span>
+            <h5>Electric vape pencils</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart">🛒</i>
+            </a>
+        </div>
+
+        <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+          <img src="./img/products/f11.jpg" alt="" />
+          <div class="des">
+            <span>electo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart">🛒</i>
+            </a>
+        </div>
+
+        <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+          <img src="./img/products/f13.jpg" alt="" />
+          <div class="des">
+            <span>electo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart">🛒</i>
+            </a>
+        </div>
+        <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+          <img src="./img/products/f9.jpg" alt="" />
+          <div class="des">
+            <span>electo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart">🛒</i>
+            </a>
+        </div>
+
+        <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+          <img src="./img/products/f1.jpg" alt="" />
+          <div class="des">
+            <span>electo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 3500</h4>
+          </div>
+          <a href="product.html">
+            <i  class="fas fa-shopping-cart cart">🛒</i>
+            </a>
+        </div>
+      </div>
+    </section>
+    <!-- p2 -->
+        <section id="product1" class="section-p1">
+   
+      <div class="pro-container">
+        <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+          <img src="./img/products/f6.jpg" alt="" />
+          <div class="des">
+            <span>electo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart">🛒</i>
+          </a>
+        </div>
+
+        <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+          <img src="./img/products/n1.jpg" alt="" />
+          <div class="des">
+            <span>shash</span>
+            <h5>Dope Vape Pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart">🛒</i>
+          </a></a>
+        </div>
+        
+        <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+          <img src="./img/products/f3.jpg" alt="" />
+          <div class="des">
+            <span>electo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart">🛒</i>
+            </a>
+        </div>
+
+        <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+          <img src="./img/products/f4.jpg" alt="" />
+          <div class="des">
+            <span>shabz</span>
+            <h5>Electric vape pencils</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart">🛒</i>
+            </a>
+        </div>
+
+        <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+          <img src="./img/products/f2.jpg" alt="" />
+          <div class="des">
+            <span>electop</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart">🛒</i>
+            </a>
+        </div>
+
+        <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+          <img src="./img/products/b2.jpg" alt="" />
+          <div class="des">
+            <span>electopizo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart">🛒</i>
+            </a>
+        </div>
+        <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+          <img src="./img/products/f12.jpg" alt="" />
+          <div class="des">
+            <span>electozip</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart">🛒</i>
+            </a>
+        </div>
+
+        <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+          <img src="./img/products/f5.jpg" alt="" />
+          <div class="des">
+            <span>electo</span>
+            <h5>Electric vape pens</h5>
+                <div class="star">
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+            <i >⭐</i>
+          </div>
+          <h4>Kshs. 500</h4>
+          </div>
+          <a href="product.html">
+            <i class="fas fa-shopping-cart cart">🛒</i>
+            </a>
+        </div>
+      </div>
+    </section>
+
+
+            <!-- <section id="product1" class="section-p1">
       <h2>Featured Products</h2>
       <p>Latest Vape Pens in Kenya</p>
       <div class="pro-container">
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
           <img src="./img/products/f1.jpg" alt="" />
           <div class="des">
             <span>electo</span>
@@ -276,7 +611,7 @@
             </a>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- featured product details ends here -->
 
     <!-- newsletter section starts here -->
@@ -371,5 +706,6 @@
         }
     </script>
     <script src="index.js"></script>
+    <script src="vanilla-tilt.js"></script>
   </body>
 </html>
