--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact Us</a></li>
           <li id="lg-bag">
-            <a href="cart.html"><i class="fas fa-shopping-bag">🛒</i></a>
+            <a href="cart.html"><i class="fas fa-shopp6ing-ba8g"><div class="cart">🛒</div></i></a>
           </li>
           <a href="#" id="close">
             <i class="fas fa-times">✖</i>
@@ -37,7 +37,7 @@
         </ul>
       </div>
       <div id="mobile">
-        <a href="cart.html"><i class="fas fa-shopping-bag">🛒</i></a>
+        <a href="cart.html"><i class="fas fa-shoppingh-bagy"><div class="cart">🛒</div></i></a>
         <i id="bar" class="fas fa-outdent">Ⓜ</i>
       </div>
     </section>
@@ -101,10 +101,10 @@
             <i >⭐</i>
             <i >⭐</i>
           </div>
-          <h4>Kshs. 500</h4>
+          <h4>Kshs. 6500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
           </a>
         </div>
 
@@ -121,10 +121,10 @@
             <i >⭐</i>
             <i >⭐</i>
           </div>
-          <h4>Kshs. 500</h4>
+          <h4>Kshs. 6900</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
           </a></a>
         </div>
         
@@ -144,7 +144,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -164,7 +164,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -184,7 +184,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -204,7 +204,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
        <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
@@ -223,7 +223,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -243,7 +243,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
       </div>
@@ -277,7 +277,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
           </a>
         </div>
 
@@ -297,7 +297,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
           </a></a>
         </div>
         
@@ -317,7 +317,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -337,7 +337,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -357,7 +357,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -377,7 +377,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
        <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
@@ -396,7 +396,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -416,7 +416,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
       </div>
