--- a/shop.html
+++ b/shop.html
@@ -77,7 +77,7 @@
           <h4>Kshs. 4500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
           </a>
         </div>
 
@@ -97,7 +97,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
           </a></a>
         </div>
         
@@ -117,7 +117,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -137,7 +137,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -157,7 +157,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -177,7 +177,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
         <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
@@ -196,7 +196,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -216,7 +216,7 @@
           <h4>Kshs. 3500</h4>
           </div>
           <a href="product.html">
-            <i  class="fas fa-shopping-cart cart">🛒</i>
+            <i  class=" cart">🛒</i>
             </a>
         </div>
       </div>
@@ -238,10 +238,10 @@
             <i >⭐</i>
             <i >⭐</i>
           </div>
-          <h4>Kshs. 500</h4>
+          <h4>Kshs. 6500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
           </a>
         </div>
 
@@ -258,10 +258,10 @@
             <i >⭐</i>
             <i >⭐</i>
           </div>
-          <h4>Kshs. 500</h4>
+          <h4>Kshs. 4500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
           </a></a>
         </div>
         
@@ -281,7 +281,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -298,10 +298,10 @@
             <i >⭐</i>
             <i >⭐</i>
           </div>
-          <h4>Kshs. 500</h4>
+          <h4>Kshs. 8500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -318,10 +318,10 @@
             <i >⭐</i>
             <i >⭐</i>
           </div>
-          <h4>Kshs. 500</h4>
+          <h4>Kshs. 5500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -341,7 +341,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
         <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
@@ -360,7 +360,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -377,10 +377,10 @@
             <i >⭐</i>
             <i >⭐</i>
           </div>
-          <h4>Kshs. 500</h4>
+          <h4>Kshs. 7500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
       </div>
