--- a/sproduct.html
+++ b/sproduct.html
@@ -138,7 +138,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
           </a>
         </div>
 
@@ -158,7 +158,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
           </a></a>
         </div>
         
@@ -178,7 +178,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -198,7 +198,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -218,7 +218,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -238,7 +238,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
         <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
@@ -257,7 +257,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -277,7 +277,7 @@
           <h4>Kshs. 3500</h4>
           </div>
           <a href="product.html">
-            <i  class="fas fa-shopping-cart cart">🛒</i>
+            <i  class=" cart">🛒</i>
             </a>
         </div>
       </div>
@@ -302,7 +302,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
           </a>
         </div>
 
@@ -322,7 +322,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
           </a></a>
         </div>
         
@@ -342,7 +342,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -362,7 +362,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -382,7 +382,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -402,7 +402,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
         <div class="pro" onclick="window.location.href='sproduct.html' " data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
@@ -421,7 +421,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
 
@@ -441,7 +441,7 @@
           <h4>Kshs. 500</h4>
           </div>
           <a href="product.html">
-            <i class="fas fa-shopping-cart cart">🛒</i>
+            <i class=" cart">🛒</i>
             </a>
         </div>
       </div>
