--- a/shop.html
+++ b/shop.html
@@ -15,7 +15,7 @@
     <!-- the navbar starts here -->
     <section id="header">
       <!-- logo -->
-      <a href="#">
+      <a href="index.html">
         <h1>NA<span>TE</span>🔌</h1>
         <!-- <img src="./img/logo.png" alt="" class="logo" /> -->
       </a>
